Fixed mail id of recipient 💕

--- a/Index.html
+++ b/Index.html
@@ -421,7 +421,7 @@
         };
         
         // ✅ EMAILS HARDCODED
-        const RECEIVER_EMAIL = "Deepanand1305@gmail.com";
+        const RECEIVER_EMAIL = "joshishivangi22@gmail.com";
         const SENDER_EMAIL = "Deepanand13051999@gmail.com";
         const YOUR_NAME = "Deep anand";
         
