Fixed mail id of recipient 💕

--- a/Index.html
+++ b/Index.html
@@ -481,13 +481,13 @@
             try {
                 const templateParams = {
                     to_email: RECEIVER_EMAIL,
-                    to_name: "Shivangi",
+                    to_name: "Potuuuu Don Jiii",
                     from_name: YOUR_NAME,
                     from_email: SENDER_EMAIL,
                     message: currentResponse === 'wife' ? 
                         `🌹 Happy Valentine's Day my Wifey! 💍✨
 
-You said "I'm your wife" - my heart completely melted! 🥰
+Aapne ab bol diya h ki "I'm your wife" - ab m aapko lifetime pareshaan karunge, be prepared hehehehehe 🥰
 This is the best Valentine's Day ever!
 
 Forever yours,
